force-app/main/default/objects/Krow__Project_Assignment_Schedule__c/Krow__Project_Assignment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Project Assignment Schedule</label>
    <nameField>
        <displayFormat>PAS-{0000}</displayFormat>
        <label>Project Assignment Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Assignment Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>