force-app/main/default/objects/Krow__Project_Assignment_Schedule__c/fields/Krow__Fri__c.field-meta.xml
<CustomField>
    <fullName>Krow__Fri__c</fullName>
    <description>Friday</description>
    <label>Fri</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>