force-app/main/default/objects/Krow__Project_Assignment_Schedule__c/fields/Krow__Project_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Assignment__c</fullName>
    <label>Project Assignment</label>
    <referenceTo>Krow__Project_Assignment__c</referenceTo>
    <relationshipLabel>Project Assignment Schedules</relationshipLabel>
    <relationshipName>ProjectAssignmentSchedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>