force-app/main/default/objects/Krow__Project_Assignment_Schedule__c/fields/Krow__Sun__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sun__c</fullName>
    <description>Sunday</description>
    <inlineHelpText>Monday</inlineHelpText>
    <label>Sun</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>