force-app/main/default/objects/Krow__Project_Assignment_Schedule__c/fields/Krow__Thu__c.field-meta.xml
<CustomField>
    <fullName>Krow__Thu__c</fullName>
    <description>Thursday</description>
    <label>Thu</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>