force-app/main/default/objects/Krow__Project_Assignment_Schedule__c/fields/Krow__Thu_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Thu_Task__c</fullName>
    <label>Deprecated</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>