force-app/main/default/objects/Krow__Project_Assignment_Schedule__c/fields/Krow__Total_Week_Project_Schedule_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Week_Project_Schedule_Hours__c</fullName>
    <formula>Krow__Mon__c + Krow__Tue__c + Krow__Wed__c + Krow__Thu__c + Krow__Fri__c + Krow__Sat__c + Krow__Sun__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Week Project Schedule Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>