force-app/main/default/objects/Krow__Project_Assignment_Schedule__c/fields/Krow__Wed__c.field-meta.xml
<CustomField>
    <fullName>Krow__Wed__c</fullName>
    <description>Wednesday</description>
    <inlineHelpText>Wednesday</inlineHelpText>
    <label>Wed</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>